@@ -64,6 +64,7 @@
 #include "log.h"
 #include "options.h"
 #include "prompter.h"
+#include "session.h"
 #include "sly.h"
 #include "stash.h"
 #include "tokens.h"
@@ -526,7 +527,8 @@ pam_sm_setcred(pam_handle_t *pamh, int flags,
 	       int argc, PAM_KRB5_MAYBE_CONST char **argv)
 {
 	if (flags & PAM_ESTABLISH_CRED) {
-		return pam_sm_open_session(pamh, flags, argc, argv);
+		return _pam_krb5_open_session(pamh, flags, argc, argv,
+					      "pam_setcred(PAM_ESTABLISH_CRED)");
 	}
 	if (flags & (PAM_REINITIALIZE_CRED | PAM_REFRESH_CRED)) {
 		if (_pam_krb5_sly_looks_unsafe() == 0) {
@@ -537,7 +539,8 @@ pam_sm_setcred(pam_handle_t *pamh, int flags,
 		}
 	}
 	if (flags & PAM_DELETE_CRED) {
-		return pam_sm_close_session(pamh, flags, argc, argv);
+		return _pam_krb5_close_session(pamh, flags, argc, argv,
+					       "pam_setcred(PAM_DELETE_CRED)");
 	}
 	warn("pam_setcred() called with no flags");
 	return PAM_SERVICE_ERR;
